# binuid-template

./: .gitignore  Cargo.toml  README.md
app/lib/: mod.rs
app/pages/: index.rs  page.rs
src/: lib.rs
src/app/components/buttons/: mod.bid
src/app/components/cards/: mod.bid
src/app/pages/: index.bid  page.rs
src/app/pages/page1/: mod.bid
src/app/pages/page2/: mod.bid
src/app/slots/: test.bid
src/engine/: mod.rs
src/libs/binuid-std/: render.bid
src/libs/binuid-std/common/: default.bid  option.bid  props.bid
src/libs/binuid-std/operations/: add.bid  neg.bid  not.bid
src/libs/binuid-std/web/: command.bid  component.bid
src/libs/binuid-std/web/events/: event.bid  listener.bid  web_event.bid
